<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>BinomeMyasnikovaSellami</groupId>
  <artifactId>ProjetBenevolat</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <properties>
<maven.compiler.source>11</maven.compiler.source>
<maven.compiler.target>11</maven.compiler.target>
</properties>
<dependencies>
	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-api</artifactId>
	    <version>5.10.0</version>
	    <scope>test</scope>
	</dependency>
<dependency>
    <groupId>mysql</groupId>
    <artifactId>mysql-connector-java</artifactId>
    <version>8.0.33</version>
</dependency>
        
</dependencies>

<build>
	<plugins>
		<plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-jar-plugin</artifactId>
		<configuration>
			<archive>
			<manifest>
				<addClasspath> true </addClasspath>
				<mainClass>package.votre_classe</mainClass>
			</manifest>
			</archive>
		</configuration>
		</plugin>
	</plugins>
</build>
 
</project>